<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.AuthFragment"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_login"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordLogIn"

        android:layout_marginTop="280dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textEmailAddress"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_login"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLogIn"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="textPassword"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signUpBtn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="@id/passwordLogIn"
        app:layout_constraintTop_toBottomOf="@id/passwordLogIn"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"

        android:text="@string/signup_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <Button
        android:id="@+id/logInBtn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="@id/passwordLogIn"
        app:layout_constraintTop_toBottomOf="@id/passwordLogIn"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"

        android:text="@string/login_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>