<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Edit.EditRoomFragment"
    android:padding="15dp">

    <TextView
        android:id="@+id/labelNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/label_number"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textNumber"
        app:layout_constraintBottom_toTopOf="@+id/labelCapacity"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/labelNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textCapacity">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelCapacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/label_capacity"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@+id/labelNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textCapacity"
        app:layout_constraintBottom_toTopOf="@id/labelClass"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textCapacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/labelCapacity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textNumber"
        app:layout_constraintBottom_toTopOf="@id/textClass">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/label_class"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@+id/labelCapacity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textClass"
        app:layout_constraintBottom_toTopOf="@id/labelPrice"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textClass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/labelClass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textCapacity"
        app:layout_constraintBottom_toTopOf="@id/textPrice">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/label_price"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@+id/labelClass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textPrice"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/labelPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textClass"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/save_button"

        android:backgroundTint="@color/black"
        style="@style/Widget.Material3.Button"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>