<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.Edit.EditStaffFragment"
    android:padding="15dp">

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/label_name"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textName"
        app:layout_constraintBottom_toTopOf="@+id/labelSurname"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/labelName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textSurname">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/label_surname"
        android:fontFamily="@font/roboto_medium"
        android:textSize="20sp"

        app:layout_constraintTop_toBottomOf="@+id/labelName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textSurname"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/labelSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textName"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="text"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/save_button"

        android:backgroundTint="@color/black"
        style="@style/Widget.Material3.Button"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>